--- a/html101.html
+++ b/html101.html
@@ -5,6 +5,6 @@
 	<body>
 	<h1> Welcome to html page at
 	<a href="http://www.usf.edu>USF</a> </h1>
-	<p> Please check back later </p>
+	<p> Hello, welcome to the html page. Come back at a later time </p>
 	</body>
 </html>
